New in version 1.5.2 (XXX 2014)
 * Update install-ubuntu-dependencies.sh for latest link-grammar

New in version 1.5.1 (3 April 2014)
 * Extensive fixes for comparatives, from Rodas Solomon.
 * New TestRelEx.java adds more unit test cases.
 * Bugfix multi-language support.
 * OpenCog server can now return multiple parses.
 * Rename Inflection-TAG to Subscript-TAG.
 * Update Wikipedia processing scripts, including sentence splitter.
 * Add new rules for extraposition processing, from Rodas.
 * Add Vagrant support, for containerized build, install, run.

New in version 1.5.0 (21 November 2013)
 * Minor cleanup of windows *.bat file, build and config files.
 * Fix the link-grammar-server.sh file so that it works.
 * Fix the opencog-server.sh file so that the port number can be set.
 * Add a plain-text server, for demo'ing relex live on the web.
 * Remove the obsolete OpenCogXML* output classes. (500 LOC of Java removed)
 * Remove the obsolete Cerego-view classes (1.7 KLOC of Java removed)
 * Remove the obsolete frame code (2.8KLOC java, 11.2 KLOC rules)
 * Remove the obsolete GATE entity tagger (1.7 KLOC Java code)
 * Add a new Relex2Logic output style, from Alex van der Peet.
 * Allow different languages and dictionary locations to be set.

New in version 1.4.2 (24 October 2013)
 * Updated maven pom file, from Krzysztof Wezowski.
 * Remove obsolete parser version, which didn't build any more.
 * Fix/remove assorted deprecated functions.
 * Print binary relations separated from unary attributes.
 * Fix "I want you to eat cake", from Rodas Solomon.
 * OWL updates from Jand Hashemi (Lucky--)

New in version 1.4.1 (15 October 2012)
 * Fix POS tagging for conjunctions.
 * NLGen output view from Blake Lemoine
 * html view from James White
 * Various fixes to the Frame rules & code, from Joel Pitt

New in version 1.4.0 (21 February 2011)
 * Fix conjunctions to work with current versions of link-grammar.
 * Fix anaphora printing for entities.